--- a/templates/issues/delete.html
+++ b/templates/issues/delete.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}Delete Post {% endblock title %}
+{% block title %}Delete Issue{% endblock title %}
 
 {% block content %}
 <h1>Delete Post</h1>
-<p>Are you sure you want to delete "{{ post.title }}"?</p>
+<p>Are you sure you want to delete "{{ issues.title }}"?</p>
 <form method="post">
     {% csrf_token %}
     <input type="submit" value="Confirm" class="btn btn-danger">
