--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -3,6 +3,6 @@
 {% block title %} Home {% endblock title %}
 
 {% block content %}
-    <h1>Welcome to BlogApp!</h1>
-    <p>The best website for your blogs.</p>
+    <h1>Welcome to Issue Tracking App !</h1>
+    <p>Submit your issues, to give you a solution!</p>
 {% endblock content %}
