--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,26 @@
 }
 
 h1{
-    color: red;
+    color: rgb(60, 60, 60);
     
 }
+
+nav{
+    background-color: rgb(0, 81, 173);
+}
+
+a.navbar-brand, a.nav-link.active{
+    color: white;
+}
+
+form{
+    margin: 10px;
+    background-color: #dedede;
+    border-radius: 10px;
+    padding: 20px;
+
+
+    
+}
+
+
