--- a/templates/issues/create.html
+++ b/templates/issues/create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}New Blog Post{% endblock title %}
+{% block title %}New Issue Post{% endblock title %}
 
 {% block content %}
     <h1>New Blog Post</h1>
