--- a/templates/base.html
+++ b/templates/base.html
@@ -36,15 +36,20 @@
                 {% if user.is_authenticated %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      {{user.username}}
+                      {{user.role}}
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{% url 'create' %}">Post new issue</a></li>
-                        <li><a class="dropdown-item" href="{% url 'todo_list' %}">To do</a></li>
-                        <li><a class="dropdown-item" href="{% url 'inprogress_list' %}">In progress</a></li>
-                        <li><a class="dropdown-item" href="{% url 'done_list' %}">Done</a></li>
-                        <li><hr class="dropdown-item-divider"></li>
-                        <li><a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a></li>
+                        
+                        
+                        {% if user.role.name == "Customer" %}
+                            <li><a class="dropdown-item" href="{% url 'create' %}">Post new issue</a></li>
+                        {% else %}
+                            <li><a class="dropdown-item" href="{% url 'todo_list' %}">To do</a></li>
+                            <li><a class="dropdown-item" href="{% url 'inprogress_list' %}">In progress</a></li>
+                            <li><a class="dropdown-item" href="{% url 'done_list' %}">Done</a></li>
+                        {% endif %}
+                            <li><hr class="dropdown-item-divider"></li>
+                            <li><a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a></li>
                         {% if user.is_staff %}
                         <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a></li>
                         {% endif %}
