--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -4,5 +4,5 @@
 
 {% block content %}
     <h1>About Us</h1>
-    <p>This website was created in 2022, to provide you the best information about all what you need to know...</p>
+    <p>This website was created in 2022, to provide you a good service to solve all your issues.</p>
 {% endblock content %}
